# tg-bot.rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  run.sh
.sqlx/: query-50809a37a80aaf0cbc3cc776f71ef582e91fc16c0ed5fce93cccedbcd79d493d.json  query-9437584cacdcc1f97746464201de5073a47558e2904d2051e9d2d7d2631883ec.json  query-953bf5a24bf52ef1ff553d0f010e68b40bdd8de5d05089438ff356145655028c.json  query-f9fa573bf28d6e20bf9f756930735757efaf16df7dd6fc705406096b37e625d7.json  query-fc7680280fa47da9944473759042e5c106883b2f93c748c64fd6657109e3eb33.json
migrations/: 20240101000000_create_tables.sql
src/: ai.rs  chat_server.rs  consts.rs  db.rs  handler.rs  main.rs
src/handlers/: commands.rs  mod.rs  msgs.rs
