[package]
name = "tg-bot-rs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "^0", features = ["macros", "auto-send"] }
log = "^0"
env_logger = "^0"

dptree = "^0"

tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "^0.1"

chrono = "^0"
openssl = { version = "^0", features = ["vendored"] }
sqlite = "^0"
anyhow = "^1"
const_format = "^0"
serde = "^1"
serde_json = "^1"
